# kpilot

./: README.md
LLM/: Dockerfile  __init__.py  __main__.py  pyproject.toml
LLM/application/: interfaces.py  services.py
LLM/domain/: entities.py
LLM/domain/interfaces/: repositories.py
LLM/infrastructure/ai_providers/: ollama_provider.py  openai_provider.py
LLM/infrastructure/grpc/: ai_service.proto  ai_service_pb2.py  ai_service_pb2_grpc.py  server.py
PromptHub/: __init__.py  __main__.py  prompthub.proto  prompthub_pb2.py  prompthub_pb2_grpc.py
PromptHub/data/: repository.json
PromptHub/domain/: entities.py
PromptHub/infrastructure/data/: repository.json
PromptHub/infrastructure/grpc/: prompthub.proto  prompthub_pb2.py  prompthub_pb2_grpc.py  server.py
